--- a/source/assets/styles/sections/interface.scss
+++ b/source/assets/styles/sections/interface.scss
@@ -94,6 +94,8 @@
 	align-items: center;
 	position: relative;
 	z-index: 999;
+	width: fit-content;
+
 	// width: 100%;
 	// margin-top:var(--pad);
 	padding:var(--pad);
